# audace-display

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DEMOD_PLUGIN.md
src/audace_display/: __init__.py  __main__.py  _errors.py  channels.py  cli.py  decimate.py  demod.py  plotting.py  plotting_qt.py  processing.py  reader.py
tests/: conftest.py  test_channels.py  test_cli.py  test_decimate.py  test_demod.py  test_plotting_qt.py  test_processing.py  test_reader.py
