[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audace-display"
version = "0.1.0"
description = "Visualization of Audace DAS acquisition files (.dat / .hdf5 / .tdms / .sgy)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Invisensing" }]
keywords = ["DAS", "fiber-optic-sensing", "visualization", "audace", "invisensing", "waterfall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
    "invisensing>=1.0.0",
]

[project.optional-dependencies]
# Fast interactive backend (smooth pan/zoom). Otherwise: matplotlib (always present).
interactive = ["pyqtgraph>=0.13", "PyQt5>=5.15"]
test = ["pytest>=7"]

[project.scripts]
audace-display = "audace_display.cli:main"

[project.urls]
Homepage = "https://github.com/invisensing-io/Audace-rust"
Source = "https://github.com/invisensing-io/Audace-rust"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
